<resources>
    <string name="app_name" translatable="false">Amenity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="menu_home">Map</string>
    <string name="menu_gallery">Chats</string>
    <string name="menu_slideshow">Settings</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="prompt_email" translatable="false">E-mail</string>
    <string name="action_sign_in">Sign in</string>
    <string name="prompt_password">Password</string>
    <string name="base_url" translatable="false">http://95.216.218.198</string>
    <string name="fill_auth">Please enter your username and password</string>
    <string name="access_denied">Please check your authorization details</string>
    <string name="unavailable">Unfortunately, the service is unavailable now</string>
    <string name="txt_choose_fragment">Select a fragment</string>
    <string name="connection_error">Connection error</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="please_select_your_home">Please select your home in the settings</string>
    <string name="write_a_message">Enter a message!</string>
    <string name="text" translatable="false">text</string>
    <string name="uri" translatable="false">http://10.0.2.2:5000</string>
    <string name="chat_socket" translatable="false">/chat</string>
    <string name="error_socket" translatable="false">/errors</string>
    <string name="status" translatable="false">status</string>
    <string name="message" translatable="false">message</string>
    <string name="error" translatable="false">error</string>
    <string name="joined" translatable="false">joined</string>
    <string name="left" translatable="false">left</string>
    <string name="enter_object_information">Enter information about the object:</string>
    <string name="ok">ОК</string>
    <string name="error_no_name">Error! No name specified</string>
    <string name="repeat">Repeat</string>
    <string name="marker_is_added">Marker is added!</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="add_object">Add one more object</string>
    <string name="territory" translatable="false">Territory</string>
    <string name="networking" translatable="false">networking</string>
    <string name="auth" translatable="false">Authorization</string>
    <string name="choose_an_object">Select an object</string>
    <string name="bench">Bench</string>
    <string name="fence">Fence</string>
    <string name="streetlight">Streetlight</string>
    <string name="tree">Tree</string>
    <string name="flowers">Flowerbed</string>
    <string name="parking">Parking</string>
    <string name="your_object">Create\n custom object</string>
    <string name="create_an_account">Create an account</string>
    <string name="email" translatable="false">Email</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="house">House:</string>
    <string name="your_data">Your data:</string>
    <string name="send">Send</string>
</resources>