<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/choose_an_object"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/size18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_bench"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/bench"
        android:textColor="@android:color/black"
        app:drawableTopCompat="@drawable/ic_bench"
        app:layout_constraintBottom_toBottomOf="@+id/txt_fence"
        app:layout_constraintEnd_toStartOf="@+id/txt_fence"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_fence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/fence"
        android:textColor="@android:color/black"
        app:drawableTopCompat="@drawable/ic_fence"
        app:layout_constraintBottom_toBottomOf="@+id/txt_streetlight"
        app:layout_constraintEnd_toStartOf="@+id/txt_streetlight" />

    <TextView
        android:id="@+id/txt_streetlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="51dp"
        android:gravity="center"
        android:text="@string/streetlight"
        android:textColor="@android:color/black"
        app:drawableTopCompat="@drawable/ic_streetlight"
        app:layout_constraintBottom_toBottomOf="@+id/txt_tree"
        app:layout_constraintEnd_toStartOf="@+id/txt_tree" />

    <TextView
        android:id="@+id/txt_tree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/tree"
        android:textColor="@android:color/black"
        app:drawableTopCompat="@drawable/ic_tree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info" />

    <TextView
        android:id="@+id/txt_flower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:gravity="center"
        android:text="@string/flowers"
        android:textColor="@android:color/black"
        app:drawableTopCompat="@drawable/ic_flower"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_parking" />

    <TextView
        android:id="@+id/txt_parking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/parking"
        android:textColor="@android:color/black"
        app:drawableTopCompat="@drawable/ic_parking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_flower"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_custom" />

    <TextView
        android:id="@+id/txt_custom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/your_object"
        android:textColor="@android:color/black"
        app:drawableTopCompat="@drawable/ic_custom_marker"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_parking"
        app:layout_constraintTop_toBottomOf="@+id/txt_streetlight" />

</androidx.constraintlayout.widget.ConstraintLayout>